--- a/style.css
+++ b/style.css
@@ -4,13 +4,15 @@
 }
 header{
     background-color: #A2FF55;
+    display: flex;
+    align-items: center;
 }
 header a{
     border: 3px solid #3C8600;
     background-color: #387C00;
     color: #A2FF55;
     text-decoration: none;
-    font-size: 40px;
+    font-size: 37px;
     text-align: center;
     
     
@@ -40,4 +42,21 @@ header a{
   align-items: center;
   height: 200;
   width: 400
+}
+
+nav{
+ width: 85%;
+ display: flex;
+ justify-content: center;
+}
+
+nav a{
+    margin: 0px 65px;
+    padding: 5px 10px;
+    border-radius: 30px;
+    box-shadow: 0 4px 8px rgba(0, 3, 7, 0.5);
+}
+
+body{
+    margin: 0;
 }
