--- a/style.css
+++ b/style.css
@@ -1,62 +1,60 @@
-.logo{
-    width: 135px;
-    height: 135px;
+.logo {
+  width: 135px;
+  height: 135px;
 }
-header{
-    background-color: #A2FF55;
-    display: flex;
-    align-items: center;
+header {
+  background-color: #a2ff55;
+  display: flex;
+  align-items: center;
 }
-header a{
-    border: 3px solid #3C8600;
-    background-color: #387C00;
-    color: #A2FF55;
-    text-decoration: none;
-    font-size: 37px;
-    text-align: center;
-    
-    
+header a {
+  border: 3px solid #3c8600;
+  background-color: #387c00;
+  color: #a2ff55;
+  text-decoration: none;
+  font-size: 37px;
+  text-align: center;
 }
-.name_short_opis{
-    color:#1f2804;
-    font-size: 39px;
-    text-align: center;
+.name_short_opis {
+  color: #1f2804;
+  font-size: 39px;
+  text-align: center;
 }
-.short_opis{
-    text-align: center;
-    font-size: 18px
+.short_opis {
+  text-align: center;
+  font-size: 18px;
 }
-.text_perevagu{
-    color:#e9ab00
-
+.text_perevagu {
+  color: #e9ab00;
 }
-.perevagu{width: 300px;
-    height: 300px;
-    border: 2px solid #80c904;
-    border-radius: 10px;
-    text-align: center;
-    background-color: #f5f5dc;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    display: flex;
+.perevagu {
+  width: 300px;
+  height: 300px;
+  border: 2px solid #80c904;
+  border-radius: 10px;
+  text-align: center;
+  background-color: #f5f5dc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
   justify-content: center;
   align-items: center;
   height: 200;
-  width: 400
+  width: 400;
 }
 
-nav{
- width: 85%;
- display: flex;
- justify-content: center;
+nav {
+  width: 85%;
+  display: flex;
+  justify-content: center;
 }
 
-nav a{
-    margin: 0px 65px;
-    padding: 5px 10px;
-    border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0, 3, 7, 0.5);
+nav a {
+  margin: 0px 65px;
+  padding: 5px 10px;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px rgba(0, 3, 7, 0.5);
 }
 
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
