--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 header{
     background-color: #A2FF55;
+    margin-bottom: 20px;
 }
 header a{
     border: 3px solid #3C8600;
@@ -15,14 +16,23 @@ header a{
     
     
 }
+.opis1{
+    
+    width: 850px;    
+    margin: 0 auto;
+      height: 200px; 
+    border: 5px solid rgb(114, 206, 114);
+    margin-bottom: 30px;
+    
+}
 .name_short_opis{
-    color:#1f2804;
+    color:#354309;
     font-size: 39px;
     text-align: center;
 }
 .short_opis{
     text-align: center;
-    font-size: 18px
+    font-size: 19px
 }
 .text_perevagu{
     color:#e9ab00
@@ -30,7 +40,7 @@ header a{
 }
 .perevagu{width: 300px;
     height: 300px;
-    border: 2px solid #80c904;
+    border: 4px solid #80c904;
     border-radius: 10px;
     text-align: center;
     background-color: #f5f5dc;
@@ -39,5 +49,6 @@ header a{
   justify-content: center;
   align-items: center;
   height: 200;
-  width: 400
+  width: 400;
+  margin: 0 auto;
 }
