--- a/golovna.css
+++ b/golovna.css
@@ -83,6 +83,10 @@ header a {
 .opis2{
  text-align: center;}
 
+ .name_opis{
+  text-align: center;
+ }
+
 nav {
   width: 85%;
   display: flex;
@@ -97,5 +101,71 @@ nav a {
 }
 
 body {
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Share+Tech&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+   font-family: "Source Code Pro", monospace;
   margin: 0;
+}
+
+.history_name{
+  text-align: center;
+}
+.history{
+  text-align: center;
+}
+
+.schedule-container {
+  max-width: 800px;
+  margin: auto;
+  background-color: #e9ffe9;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 100, 0, 0.2);
+}
+
+.schedule-container h2 {
+  text-align: center;
+  color: #3baa41;
+  margin-bottom: 20px;
+}
+
+.schedule-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.schedule-table th {
+  background-color: #a5d6a7;
+  color: #2b9732;
+  padding: 12px;
+  font-size: 16px;
+}
+
+.schedule-table td {
+  padding: 10px 12px;
+  border-bottom: 1px solid #e3fce4;
+}
+
+.schedule-table tr:nth-child(even) {
+  background-color: #f9fbe7;
+}
+
+.schedule-table tr:hover {
+  background-color: #fffbce;
+}
+
+.info-box {
+  max-width: 800px;
+  margin: 40px auto;
+  background-color: #fcfff0;
+  border-left: 8px solid #fef030;
+  border-radius: 12px;
+  padding: 25px 30px;
+  box-shadow: 0 4px 10px rgba(102, 187, 106, 0.2);
+  
+}
+
+.info-box p {
+  font-size: 16px;
+  color: #4e4e4e;
+  line-height: 1.6;
 }
