--- a/golovna.css
+++ b/golovna.css
@@ -80,12 +80,13 @@ header a {
     margin: 0 auto;
 }
 
-.opis2{
- text-align: center;}
-
- .name_opis{
-  text-align: center;
- }
+.protabir_golovne{
+max-width: 800px;
+  margin: 40px auto;
+  padding: 0 20px;
+  font-size: 16px;
+  text-align: justify;
+}
 
 nav {
   width: 85%;
@@ -124,7 +125,7 @@ body {
 
 .schedule-container h2 {
   text-align: center;
-  color: #3baa41;
+  color: #1c501f;
   margin-bottom: 20px;
 }
 
@@ -134,24 +135,22 @@ body {
 }
 
 .schedule-table th {
-  background-color: #a5d6a7;
-  color: #2b9732;
+  background-color: #A2FF53;
+  color: #103113;
   padding: 12px;
   font-size: 16px;
 }
 
 .schedule-table td {
   padding: 10px 12px;
-  border-bottom: 1px solid #e3fce4;
+  border-bottom: 1px solid #acd0ae;
 }
 
 .schedule-table tr:nth-child(even) {
   background-color: #f9fbe7;
 }
 
-.schedule-table tr:hover {
-  background-color: #fffbce;
-}
+
 
 .info-box {
   max-width: 800px;
