--- a/program.css
+++ b/program.css
@@ -49,6 +49,7 @@ body {
   padding: 20px;
   border-radius: 15px;
   box-shadow: 0 0 10px rgba(0, 100, 0, 0.2);
+  padding: 30px 20px;
 }
 
 .schedule-container h2 {
@@ -97,7 +98,8 @@ body {
 }
 
 .theme{text-align: center;
-font-size: 30px;}
+font-size: 30px;
+padding: 30px 20px;}
 .theme-days {
   max-width: 1000px;
   margin: 50px auto;
@@ -145,3 +147,45 @@ font-size: 30px;}
   color: #4e4e4e;
   margin: 0;
 }
+
+ .accordion {
+      background: linear-gradient(90deg, #cde990, #f5e678);
+      color: #2d3a10;
+      cursor: pointer;
+      padding: 18px 20px;
+      width: 100%;
+      border: none;
+      text-align: left;
+      font-size: 18px;
+      font-weight: bold;
+      border-radius: 12px;
+      transition: background-color 0.3s ease;
+      box-shadow: 0 4px 10px rgba(60, 80, 40, 0.2);
+    }
+
+    .accordion:hover {
+      background: linear-gradient(90deg, #d6f5a3, #fdf187);
+    }
+
+    .panel {
+      margin-top: 10px;
+      padding: 15px 20px;
+      background-color: #f1ffe5;
+      border-left: 4px solid #9ccf3b;
+      border-radius: 10px;
+      display: none;
+      box-shadow: inset 0 0 8px rgba(100, 130, 70, 0.1);
+    }
+
+    .panel ul {
+      padding-left: 20px;
+      margin: 0;
+    }
+
+    .panel li {
+      margin-bottom: 8px;
+      line-height: 1.6;
+    }
+    .occupation{
+        padding: 30px 20px;
+    }
