--- a/golovna.css
+++ b/golovna.css
@@ -91,7 +91,7 @@ max-width: 800px;
   box-shadow: 0 6px 14px rgba(0, 100, 0, 0.3);
 }
 
-.prices {
+.price {
   padding: 20px;
   background-color: #f8f9fa;
   border-radius: 16px;
@@ -100,7 +100,7 @@ max-width: 800px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.prices h2 {
+.price h2 {
   text-align: center;
   margin-bottom: 16px;
   color: #fbc02d;
@@ -109,29 +109,29 @@ max-width: 800px;
   transition: color 0.3s;
 }
 
-.prices h2:hover {
+.price h2:hover {
   color: #a88300;
 }
 
-.prices table {
+.price table {
   width: 100%;
   border-collapse: collapse;
   transition: 0.3s ease;
 }
 
-.prices th,
-.prices td {
+.price th,
+.price td {
   padding: 12px 16px;
   border: 1px solid #ccc;
   text-align: center;
 }
 
-.prices th {
+.price th {
   background-color: #3c8600;
   color: #fff;
 }
 
-.prices tr:nth-child(even) {
+.price tr:nth-child(even) {
   background-color: #e0f2e2;
 }
 
@@ -167,4 +167,10 @@ body {
 
 .more_info:hover{
 color: #43a047;
+}
+
+
+
+footer{
+  background-color: #cadcbb;
 }
