--- a/program.css
+++ b/program.css
@@ -41,44 +41,37 @@ body {
   margin: 0;
 }
 
-
-.rozklad{
+.schedule-container {
   max-width: 800px;
   margin: auto;
   background-color: #e9ffe9;
   padding: 20px;
   border-radius: 15px;
-  box-shadow: 0 0 10px rgba(0, 100, 0, 0.2);
-  padding: 30px 20px;
+  box-shadow: 0 0 10px rgba(9, 51, 0, 0.2);
 }
 
-.rozklad h2 {
+.schedule-container h2 {
   text-align: center;
-  color: #1c501f;
+  color: #000000;
   margin-bottom: 20px;
 }
 
-.rozkladtable {
+.schedule-table {
   width: 100%;
   border-collapse: collapse;
 }
 
-.rozkladtable th {
-  background-color: #A2FF53;
-  color: #103113;
+.schedule-table th {
+  background-color: #A2FF55;
+  color: #000000;
   padding: 12px;
   font-size: 16px;
 }
 
-.rozkladtable td {
+.schedule-table td {
   padding: 10px 12px;
-  border-bottom: 1px solid #acd0ae;
+  border-bottom: 1px solid #c8e6c9;
 }
-
-.rozrladtable tr:nth-child(even) {
-  background-color: #f9fbe7;
-}
-
 
 .info-box {
   max-width: 800px;
