--- a/golovna.css
+++ b/golovna.css
@@ -39,6 +39,7 @@ nav a:hover {
   padding: 30px 20px;
   max-width: 800px;
   margin: auto;
+  background-image: linear-gradient(to right, white, #abff66, white);
 }
 
 .short_opis {
@@ -80,6 +81,7 @@ max-width: 800px;
   padding: 0 20px;
   font-size: 16px;
   text-align: justify;
+  background-image: linear-gradient(to top, white, #e1feca, white);
 }
 
 .register {
@@ -171,15 +173,33 @@ nav a {
   box-shadow: 0 4px 8px rgba(0, 3, 7, 0.5);
 }
 
-
-.more_info:hover{
-color: #43a047;
+.more_info{
+  text-decoration: none;
+  font-size: 18px;
 }
 
+.more_info:hover{
+color: #3f9643;
+}
+
+.pic1karpaty{
+  display: flex;
+  justify-content: center;
+  width: 800px;
+  height: 400px;
+  margin-left: 354px;
+  border-radius: 20px;
+  margin-bottom: 80px;
+  
+}
+.hidden{
+  display: none;
+}
 
 
 footer{
   background-color: #cadcbb;
   height: 500px;
+
 }
 
