--- a/golovna.css
+++ b/golovna.css
@@ -220,3 +220,24 @@ footer img {
     width: 25px;
     margin: 5px;
 }
+
+.register {
+    display: inline-block;
+    background-color: #66bb6a;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 14px 28px;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 30px;
+    box-shadow: 0 4px 10px rgba(0, 100, 0, 0.2);
+    transition: background-color 0.3s, transform 0.2s;
+    text-align: center;
+
+}
+
+.register:hover {
+    background-color: #43a047;
+    transform: scale(1.05);
+    box-shadow: 0 6px 14px rgba(0, 100, 0, 0.3);
+}
