--- a/uchast.css
+++ b/uchast.css
@@ -242,3 +242,42 @@ table td {
   background-color: #558b2f;
   transform: scale(1.05);
 }
+footer{
+  background-color: #cadcbb;
+  height: 190px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  margin-top: 20px;
+  justify-content: space-around;
+}
+
+
+footer a {
+    text-decoration: none;
+    color: #000000;
+    font-weight: bold;
+    width: 130px;
+    transition: 0.4s;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+footer a:hover {
+    background-color: #ffffff;
+    transform: scale(1.1);
+    box-shadow: #000000 3px 8px 12px;
+    padding: 10px 15px;
+    border-radius: 25px;
+}
+
+footer img {
+    width: 25px;
+    margin: 5px;
+}
+.tel{
+  text-align: right;
+  font-size: 19px;
+  margin-right: 30px;
+}
