--- a/forma2.css
+++ b/forma2.css
@@ -23,3 +23,9 @@ h1{
     text-decoration: none;
     margin-top: 40px;
 }
+
+nav a:hover {
+    transform: scale(1.05);
+    text-decoration: underline #a2ff55 2px solid;  
+    box-shadow: 0 8px 12px rgba(0, 3, 7, 0.5);
+}
