--- a/uchast.css
+++ b/uchast.css
@@ -281,3 +281,9 @@ footer img {
   font-size: 19px;
   margin-right: 30px;
 }
+
+nav a:hover {
+    transform: scale(1.05);
+    text-decoration: underline #a2ff55 2px solid;  
+    box-shadow: 0 8px 12px rgba(0, 3, 7, 0.5);
+}
